<resources>
    <string name="app_name">Pokedex</string>

    <string name="bio_connexion">Me connecter</string>
    <string name="bio_inscription">Créer mon compte</string>
    <string name="champ_mail">Mail d\'utilisateur</string>
    <string name="champ_password">Mot de passe</string>
    <string name="bouton_aller_connexion"><![CDATA[< Me connecter]]></string>
    <string name="bouton_aller_inscription"><![CDATA[Créer mon compte >]]></string>
    <string name="bouton_connexion">Connexion</string>
    <string name="bouton_inscription">Inscription</string>

    <string name="pokemon_liste_add">Bouton Ajouter</string>
    <string name="pokemon_liste_delete">Bouton Supprimer</string>
    <string name="pokemon_liste_logoff">Bouton Logoff</string>

    <string name="pokemon_item_sprite_desc">Sprite</string>
    <string name="pokemon_item_nom_exemple">Pikachu</string>
    <string name="pokemon_item_numero_exemple">#12</string>
    <string name="pokemon_item_energy_desc">Foudre</string>
    <string name="pokemon_info_pv">PV</string>
    <string name="pokemon_info_attaque">Attaque</string>
    <string name="pokemon_info_defense">Défense</string>
    <string name="pokemon_info_attaque_s">Attaque S</string>
    <string name="pokemon_info_defense_s">Défense S</string>
    <string name="pokemon_info_vitesse">Vitesse</string>
    <string name="pokemon_info_vitesse_value">80</string>
    <string name="pokemon_info_defense_s_value">70</string>
    <string name="pokemon_info_attaque_s_value">110</string>
    <string name="pokemon_info_defense_value">70</string>
    <string name="pokemon_info_attaque_value">120</string>
    <string name="pokemon_info_pv_value">80</string>
    <string name="pokemon_info_stats_titre">Statistiques</string>
    <string name="pokemon_liste_id">Utilisateur ID :</string>
    <string name="pokemon_info_res_titre">Résistances</string>
    <string name="pokemon_membre1">Boulogne Bastian</string>
    <string name="pokemon_membre2">Florentin Allart</string>
    <string name="pokemon_membre3">Alex Decouttere</string>

</resources>