<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pokemon.view.activity.PokemonInfoActivity">

    <!-- Entête -->
    <TextView
        android:id="@+id/pokemon_info_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Nom Pokémon + Énergies -->
    <LinearLayout
        android:id="@+id/pokemon_info_identite"
        android:layout_below="@+id/pokemon_info_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/pokemon_info_nom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_item_nom_exemple"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/pokemon_info_energy2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/pokemon_item_energy_desc"
            android:src="@drawable/ic_pokeball" />

        <ImageView
            android:id="@+id/pokemon_info_energy"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/pokemon_item_energy_desc"
            android:src="@drawable/ic_pokeball" />

    </LinearLayout>

    <!-- Carte Pokémon -->
    <FrameLayout
        android:id="@+id/pokemon_info_carte"
        android:layout_below="@id/pokemon_info_identite"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/fond_carte_pokemon"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/pokemon_info_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_item_nom_exemple"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="15sp"
            android:background="@drawable/fond_carte_numero_pokemon"
            />

        <ImageView
            android:id="@+id/pokemon_info_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/pokemon_item_energy_desc"
            android:src="@drawable/ic_pokeball" />

    </FrameLayout>

    <!-- Stats -->
    <LinearLayout
        android:id="@+id/pokemon_info_stats"
        android:layout_below="@+id/pokemon_info_carte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_info_stats_titre"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <!-- PV -->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/fond_stats"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_pv"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pokemon_info_pv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_pv_value"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/white"/>

        </LinearLayout>

        <!-- Attaque -->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:background="@drawable/fond_stats"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_attaque"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pokemon_info_attaque"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_attaque_value"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/white"/>

        </LinearLayout>

        <!-- Défense -->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:background="@drawable/fond_stats"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_defense"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pokemon_info_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_defense_value"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/white"/>

        </LinearLayout>

        <!-- Attaque S -->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:background="@drawable/fond_stats"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_attaque_s"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pokemon_info_attaque_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_attaque_s_value"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/white"/>

        </LinearLayout>

        <!-- Défense S -->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:background="@drawable/fond_stats"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_defense_s"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/pokemon_info_defense_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_defense_s_value"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/white"/>

        </LinearLayout>

        <!-- Vitesse -->
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:background="@drawable/fond_stats"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pokemon_info_vitesse"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/pokemon_info_vitesse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_info_vitesse_value"
                android:textSize="16sp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Bouton Fermer -->
    <ImageButton
        android:id="@+id/pokemon_info_fermer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/fond_bouton_circulaire"
        android:contentDescription="@string/pokemon_liste_logoff"
        android:src="@drawable/ic_close"
        app:tint="@color/black" />

</RelativeLayout>