<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pokemon.view.activity.PokemonGroupeActivity">

    <!-- Entête -->
    <TextView
        android:id="@+id/pokemon_groupe_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondItemPokemon"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/textePokemon"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/pokemon_groupe_membre1"
        android:layout_below="@+id/pokemon_groupe_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_membre1"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/textePokemon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/pokemon_groupe_membre2"
        android:layout_below="@+id/pokemon_groupe_membre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_membre2"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/textePokemon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/pokemon_groupe_membre3"
        android:layout_below="@+id/pokemon_groupe_membre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_membre3"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/textePokemon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"/>

    <!-- Bouton Fermer -->
    <ImageButton
        android:id="@+id/pokemon_groupe_fermer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/fond_bouton_circulaire"
        android:contentDescription="@string/pokemon_liste_logoff"
        android:src="@drawable/ic_close"
        app:tint="@color/black" />

</RelativeLayout>