<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pokemon.view.activity.PokemonListeActivity">

    <!-- Entête -->
    <TextView
        android:id="@+id/pokemon_liste_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondItemPokemon"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/textePokemon"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/pokemon_liste_id"
        android:layout_below="@+id/pokemon_liste_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_liste_id"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"/>

    <!-- Liste -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokemon_liste_contenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pokemon_liste_footer"
        android:layout_below="@id/pokemon_liste_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <!-- Footer -->
    <LinearLayout
        android:id="@+id/pokemon_liste_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/pokemon_liste_logoff"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/fond_bouton_circulaire"
            android:contentDescription="@string/pokemon_liste_logoff"
            android:src="@drawable/ic_logoff"
            app:tint="@color/black" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/pokemon_liste_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/fond_bouton_circulaire"
            android:contentDescription="@string/pokemon_liste_delete"
            android:src="@drawable/ic_delete"
            app:tint="@color/black" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/pokemon_liste_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/fond_bouton_circulaire"
            android:contentDescription="@string/pokemon_liste_add"
            android:src="@drawable/ic_pokeball"
            app:tint="@color/black" />

    </LinearLayout>

</RelativeLayout>