<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.RegisterActivity">

    <!-- Entête -->
    <TextView
        android:id="@+id/inscriptionTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/inscriptionDesc"
        android:layout_below="@id/inscriptionTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio_inscription"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp" />

    <View
        android:layout_below="@id/inscriptionDesc"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"/>

    <!-- Formulaire -->
    <LinearLayout
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/champ_mail"
            android:textColor="@color/white"
            android:labelFor="@+id/loginMail"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inscriptionMail"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/fond_champ"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/champ_password"
            android:labelFor="@+id/loginPassword"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inscriptionPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:background="@drawable/fond_champ"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="" />

    </LinearLayout>

    <!-- Boutons -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/boutonAllerConnexion"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/bouton_aller_connexion"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/boutonInscription"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/bouton_inscription"
            android:textSize="16sp"
            android:background="@drawable/fond_bouton"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>